--- a/Copy_of_Assignment_Week_3.ipynb
+++ b/Copy_of_Assignment_Week_3.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "Copy of Assignment Week 3.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -198,13 +199,25 @@
       "metadata": {
         "id": "aHvro65PGp0J",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "290cfe8d-ad91-4237-83c9-4531ab6b0b28"
       },
       "source": [
-        ""
+        "print(\"hello world\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello world\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
